--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
-baseURL: "https://pascalmichaillat.org/hugo-website/" 
-title: Moritz-Maria von Igelfeld
+baseURL: "https://rmukk.github.io/" 
+title: Raj Mukkamala
 theme: PaperMod
 
 enableInlineShortcodes: true
