--- a/config.yml
+++ b/config.yml
@@ -12,15 +12,15 @@ taxonomies:
 
 menu:
     main:
-        - name: Books
-          url: books/
-          weight: 5 
-        - name: Papers
-          url: papers/
-          weight: 2
-        - name: Courses
-          url: courses/
-          weight: 3
+   #     - name: Books
+   #       url: books/
+   #       weight: 5 
+   #     - name: Papers
+   #       url: papers/
+   #       weight: 2
+   #     - name: Courses
+   #       url: courses/
+    #      weight: 3
     #    - name: Data
     #      url: data/
     #      weight: 4 
@@ -29,7 +29,7 @@ menu:
     #      weight: 6
 
 params:
-    description: "Personal wesbite of Raj Mukkamala"
+    description: "Website of Raj Mukkamala"
     author: Raj Mukkamala
     # googleAnalyticsID: "G-XXXXX"
     DateFormat: "January 2006"
@@ -44,7 +44,7 @@ params:
     ShowBreadCrumbs: false
     ShowCodeCopyButtons: true
     ShowAllPagesInArchive: false
-    MainSections: ["books","courses","papers","data"]
+    MainSections: []
     ShowToc: false
     disableScrollToTop: true
     TocOpen: true
@@ -60,20 +60,20 @@ params:
           imageWidth: 160
           imageHeight: 160
           buttons:
-            - name: Papers
-              url: papers/
-            - name: Data
-              url: data/
-            - name: Books
-              url: books/
-            - name: Courses
-              url: courses/
-            - name: Tags
-              url: tags/
-            - name: Archive
-              url: archive/
-            - name: Blog
-              url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
+         #   - name: Papers
+         #     url: papers/
+         #   - name: Data
+         #     url: data/
+         #   - name: Books
+         #     url: books/
+         #   - name: Courses
+         #    url: courses/
+         #   - name: Tags
+         #     url: tags/
+         #   - name: Archive
+         #     url: archive/
+         #   - name: Blog
+         #     url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
 
     socialIcons:
         - name: CV
