--- a/config.yml
+++ b/config.yml
@@ -18,8 +18,8 @@ menu:
    #     - name: Papers
    #       url: papers/
    #       weight: 2
-   #     - name: Courses
-   #       url: courses/
+        - name: Courses
+          url: courses/
     #      weight: 3
     #    - name: Data
     #      url: data/
@@ -44,7 +44,7 @@ params:
     ShowBreadCrumbs: false
     ShowCodeCopyButtons: true
     ShowAllPagesInArchive: false
-    MainSections: []
+    MainSections: ["Courses"]
     ShowToc: false
     disableScrollToTop: true
     TocOpen: true
