--- a/config.yml
+++ b/config.yml
@@ -76,8 +76,10 @@ params:
          #     url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
 
     socialIcons:
-        - name: CV
-          url: cv.pdf
+  #      - name: CV
+  #        url: cv.pdf
+        - name: LinkedIn
+          url: www.linkedin.com/in/rmukk
         - name: Email
           url: mailto:raj@caltech.edu
   #      - name: Zoom
