--- a/config.yml
+++ b/config.yml
@@ -10,6 +10,24 @@ pagination:
 taxonomies:
     tag: tags
 
+menu:
+    main:
+   #     - name: Books
+   #       url: books/
+   #       weight: 5 
+   #     - name: Papers
+   #       url: papers/
+   #       weight: 2
+        - name: Courses
+          url: courses/
+    #      weight: 3
+    #    - name: Data
+    #      url: data/
+    #      weight: 4 
+    #    - name: Blog
+    #      url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
+    #      weight: 6
+
 
 params:
     description: "Website of Raj Mukkamala"
@@ -27,7 +45,7 @@ params:
     ShowBreadCrumbs: false
     ShowCodeCopyButtons: true
     ShowAllPagesInArchive: false
-    MainSections: []
+    MainSections: ["Courses"]
     ShowToc: false
     disableScrollToTop: true
     TocOpen: true
